// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageContainer snapshots should match snapshot when there are no messages 1`] = `
<div
  class="flex flex-col gap-16"
  data-testid="thread-messages"
/>
`;

exports[`MessageContainer snapshots should match snapshot with user and assistant messages 1`] = `
<div
  class="flex flex-col gap-16"
  data-testid="thread-messages"
>
  <div
    data-testid="message-user"
  >
    ¿Quién ganó?
  </div>
  <div
    data-is-generating="false"
    data-is-last="true"
    data-testid="message-assistant"
  >
    Argentina
  </div>
</div>
`;
